syntax = "proto3";

// internal/protobufs

package protobufs;

option go_package = "/protobufs";


// Message to create a new game room
message CreateGameRoomRequest {
  string player_name = 1;
}

// Message to join an existing game room
message JoinGameRoomRequest {
  string room_id = 1;
  string player_name = 2;
}

// PlayerData represents information about a player
message PlayerData {
  string player_id = 1;
  string name = 2;
  int32 score = 3;
  // Add more fields as needed for player-related data
}



